--- a/config/leaps_supervisor.conf
+++ b/config/leaps_supervisor.conf
@@ -1,6 +1,6 @@
 [program:leaps]
 command=/opt/%(program_name)s/bin/gunicorn -k 'eventlet' -w 4 -b 127.0.0.1:5005 portality.app:app
-user=cloo
+user=leaps
 directory=/opt/%(program_name)s/src/%(program_name)s
 stdout_logfile=/var/log/supervisor/%(program_name)s-access.log
 stderr_logfile=/var/log/supervisor/%(program_name)s-error.log
