--- a/config/supervisor/leaps.conf
+++ b/config/supervisor/leaps.conf
@@ -1,5 +1,5 @@
 [program:leaps]
-command=/home/leaps/%(program_name)s/bin/gunicorn -k 'eventlet' -w 4 -b 127.0.0.1:5005 portality.app:app
+command=/home/leaps/%(program_name)s/bin/gunicorn -k 'eventlet' -t 300 -w 4 -b 127.0.0.1:5005 portality.app:app
 user=leaps
 directory=/home/leaps/%(program_name)s/src/%(program_name)s
 stdout_logfile=/var/log/supervisor/%(program_name)s-access.log
